v5.0/changelog/v5.x.x/v5.x.x.md
# Release history
-----------------

<a name="v501"></a>
## Version 5.0.1

**:bug: Bug fixes**

* Fixed installation issue.
* Updated package dependencies.


<a name="v500"></a>
## Version 5.0.0

**:star: New features**

* Completely new [hyperparameter tuning][] process.
* Completely reworked [plotting interface][plots].
* Accelerate your pipelines with [sklearnex][accelerating-pipelines].
* New [FeatureGrouper][] class to extract statistical features from
  similar groups.
* New [create_app][adaboost-create_app] method to create a nice front-end
  for model predictions.
* New [inverse_transform][atomclassifier-inverse_transform] method for
  atom and models.
* New linear model: [OrthogonalMatchingPursuit][].
* The [plot_results][] method now accepts time metrics.

**:pencil: API changes**

* The `gpu` parameter is deprecated in favor of [`device`][atomclassifier-device]
  and [`engine`][atomclassifier-engine].
* Refactor of the [Cleaner][], [Discretizer][], [Encoder][] and [FeatureSelector][]
  classes.
* Refactor of all [shap plots][shap].
* Refactor of the [apply][atomclassifier-apply] method.
* The `plot_scatter_matrix` method is renamed to [plot_relationships][].
* The `kSVM` model is renamed to [SVM][supportvectormachine].
* Multidimensional datasets are no longer supported. Check the [deep learning][]
  section of the user guide for guidance with such datasets.
* The `greater_is_better`, `needs_proba` and `needs_threshold` parameters are
  deprecated. Metric functions are now created using [make_scorer](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.make_scorer.html)'s
  default parameters.
* The `drop` method is removed from atom. Use the reworked [apply][atomclassifier-apply]
  method instead.
* The [prediction methods][] can no longer be called from atom.
* The dashboard method for models is now called [create_dashboard][adaboost-create_dashboard].

**:rocket: Enhancements**

* New examples for [plotting][example-advanced-plotting], [automated feature scaling][example-automated-feature-scaling],
  [pruning][example-pruning] and [advanced hyperparameter tuning][example-hyperparameter-tuning].
* The [Normalizer][] class can now be accelerated with [GPU][gpu-acceleration].
* The [Scaler][] class now ignores binary columns (only 0s and 1s).
* The `models` parameter in plot and utility methods now accepts model indices.
* The [transform][atomclassifier-transform] method now also transforms
  only `y` when `X` has a default value.
* The [prediction methods][] now return pandas objects.
* Dependency versions are checked with originals after unpickling.
* Automatic generation of documentation from docstrings.
* Improvements in documentation display for mobile phones.
* New `feature_importance` attribute for models.
* Added a visualization for [automated feature scaling][] to [plot_pipeline][].

**:bug: Bug fixes**

* The [FeatureExtractor][] class no longer raises a warning for highly
  fragmented dataframes.
* Fixed a bug where models could not call the [score][] function.
* The [Encoder][] class no longer fails when the user provides ordinal
  values that are not present during fitting.
* Fixed a bug with the `max_nan_rows` parameter in the [Imputer][] class.
* Fixed a bug where [Tokenizer][] could fail when no ngrams were found.
