v5.1/changelog/v5.x.x/v5.x.x.md
# Release history
-----------------

<a name="v512"></a>
## Version 5.1.2

**:pencil: API changes**

* The default `strategy` for the [`encode`][atomclassifier-encode] method has
  changed from "LeaveOneOut" to "Target"-encoding. LeaveOneOut is no longer a
  supported strategy.

**:bug: Bug fixes**

* Fixed a bug where stratification failed for datasets where the target column was
  not placed last.
* Fixed a bug where transformers with no `get_feature_names_out` method could fail.
* Fixed a bug where the [FeatureSelector][] class could fail when transforming a
  dataset with different column order than seen at fit time.


<a name="v511"></a>
## Version 5.1.1

**:pencil: API changes**

* The `infrequent_to_value` parameter in the [Encoder][] class is replaced with
  `infrequent_to_value` to be consistent with sklearn's naming convention.

**:rocket: Enhancements**

* Added the `kwargs` parameter to the [save_data][atomclassifier-save_data] method.

**:bug: Bug fixes**

* Fixed an installation issue for systems without an x86 architecture.
* Fixed a bug where [Voting][] would fail for certain metrics.
* Fixed a bug where the [automl][atomclassifier-automl] method would fail for some transformers.
* Fixed a bug where the time metric in mlflow was always zero.
* Fixed a bug where shap plots wouldn't display the full column names.
* Fixed a bug where column names where not properly propagated during
  transformation.


<a name="v510"></a>
## Version 5.1.0

**:star: New features**

* Support for multilabel classification, multiclass-multilabel classification
  and multioutput regression tasks. Read more in the [user guide][multioutput-tasks].
* New [backend][atomclassifier-backend] parameter to choose a [parallel execution][]
  backend.
* New [`parallel`][directclassifier-parallel] parameter to train multiple models
  simultaneously.
* Integration with [DAGsHub](https://www.dagshub.com) to store your mlflow experiments.
  Read more in the [user guide][dagshub-integration].
* New [serve][adaboost-serve] method to deploy models to a rest API endpoint.
* New [get_best_threshold][adaboost-get_best_threshold] method to calculate the
  optimal threshold for binary and multilabel tasks.
* New [get_sample_weight][atomclassifier-get_sample_weight] method to calculate
  the sample weights for a balanced data set.

**:pencil: API changes**

* The `report` method is renamed to [eda][atomclassifier-eda].
* The `ATOMLoader` class is deprecated in favor of the [load][atomclassifier-load] method.
* The `errors` attribute for runners is deprecated.

**:rocket: Enhancements**

* Added three new notebook examples.
* Added the `drop_chars` parameter to the [Cleaner][] class.
* Added the `errors` parameter to the trainers.
* Rework of the dependencies, making the base package more lightweight.
* The logging entries for external libraries are redirected to atom's
  file handler.

**:bug: Bug fixes**

* Fixed multiple errors that appeared after sklearn's 1.2 update.
* Fixed a bug where hyperparameter tuning could fail for multi-metric runs.
* Fixed a bug where trials would try to report multiple times the same step.
* Fixed a bug where [custom models][] could skip [in-training validation][].
* Fixed an issue where the bootstrapping estimators were trained using
  `partial_fit`.


<a name="v501"></a>
## Version 5.0.1

**:bug: Bug fixes**

* Fixed installation issue.
* Updated package dependencies.


<a name="v500"></a>
## Version 5.0.0

**:star: New features**

* Completely new [hyperparameter tuning][] process.
* Completely reworked [plotting interface][plots].
* Accelerate your pipelines with [sklearnex][accelerating-pipelines].
* New [FeatureGrouper][] class to extract statistical features from
  similar groups.
* New [create_app][adaboost-create_app] method to create a nice front-end
  for model predictions.
* New [inverse_transform][atomclassifier-inverse_transform] method for
  atom and models.
* New linear model: [OrthogonalMatchingPursuit][].
* The [plot_results][] method now accepts time metrics.

**:pencil: API changes**

* The `gpu` parameter is deprecated in favor of [`device`][atomclassifier-device]
  and [`engine`][atomclassifier-engine].
* Refactor of the [Cleaner][], [Discretizer][], [Encoder][] and [FeatureSelector][]
  classes.
* Refactor of all [shap plots][shap].
* Refactor of the [apply][atomclassifier-apply] method.
* The `plot_scatter_matrix` method is renamed to [plot_relationships][].
* The `kSVM` model is renamed to [SVM][supportvectormachine].
* Multidimensional datasets are no longer supported. Check the [deep learning][]
  section of the user guide for guidance with such datasets.
* The `greater_is_better`, `needs_proba` and `needs_threshold` parameters are
  deprecated. Metric functions are now created using [make_scorer](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.make_scorer.html)'s
  default parameters.
* The `drop` method is removed from atom. Use the reworked [apply][atomclassifier-apply]
  method instead.
* The [prediction methods][] can no longer be called from atom.
* The dashboard method for models is now called [create_dashboard][adaboost-create_dashboard].

**:rocket: Enhancements**

* New examples for [plotting][example-advanced-plotting], [automated feature scaling][example-automated-feature-scaling],
  [pruning][example-pruning] and [advanced hyperparameter tuning][example-hyperparameter-tuning].
* The [Normalizer][] class can now be accelerated with [GPU][gpu-acceleration].
* The [Scaler][] class now ignores binary columns (only 0s and 1s).
* The `models` parameter in plot and utility methods now accepts model indices.
* The [transform][atomclassifier-transform] method now also transforms
  only `y` when `X` has a default value.
* The [prediction methods][] now return pandas objects.
* Dependency versions are checked with originals after unpickling.
* Automatic generation of documentation from docstrings.
* Improvements in documentation display for mobile phones.
* New `feature_importance` attribute for models.
* Added a visualization for [automated feature scaling][] to [plot_pipeline][].

**:bug: Bug fixes**

* The [FeatureExtractor][] class no longer raises a warning for highly
  fragmented dataframes.
* Fixed a bug where models could not call the [score][] function.
* The [Encoder][] class no longer fails when the user provides ordinal
  values that are not present during fitting.
* Fixed a bug with the `max_nan_rows` parameter in the [Imputer][] class.
* Fixed a bug where [Tokenizer][] could fail when no ngrams were found.
